anyway From Mac

--- a/daihugou2.html
+++ b/daihugou2.html
@@ -164,6 +164,10 @@ methods: {
 
             // this.last_played_player_idxとは、最後にカードを出したplayerのindex
             console.log(this.last_played_player_idx);
+
+
+            // remaining_player_idx_aryからlast_played_player_idxを除いた配列を作る
+            // その配列にai_playさせてlast_played_player_idx以外が全員passしたら
         }
     },
     can_play_card(rank) {
