anyway From Mac

--- a/daihugou2.html
+++ b/daihugou2.html
@@ -12,11 +12,16 @@
 </style>
 <body>
     <div id="app">
+        <button @click="ai_play_card(this.current_player_index_num)">play_last</button>
+        <!-- testing switch button -->
+        <button @click="testing = !testing">testing button</button>
+        {{ testing }}
         <button @click="revolution = !revolution">revolution button</button>
         <h2>revolution: {{ revolution }}</h2>
         passed_players_index: {{ passed_players_index }}
         winner_player_ary: {{ winner_player_ary }}
-        <button @click="human_pass(0)">pass</button>
+        <!-- <button @click="human_pass(0)">pass</button> -->
+        {{this.current_player_index_num}}
 
         <h2 v-for="(player, player_idx) in player_name">{{ player }}: {{ player_card[player_idx].length }}</h2>
         <button @click="startGame">ゲーム開始</button>
@@ -30,7 +35,10 @@
                     {{ card }}
                     <!-- <button @click="playCard(player_idx, card.id)">use</button> -->
                     <!-- <button @click="all_player_play(player_idx, card.id)">all_player_play</button> -->
+                    <!-- ifでhumanの時だけボタン表示 -->
+                    <span v-if="player_idx === 0" @click="human_play_card(player_idx, card.id)">
                     <button @click="human_player_play(player_idx, card.id)">human_player_play</button>
+                    </span>
                 </h2>
             </div>
         </div>
@@ -56,6 +64,8 @@ data() {
         deck: [],
         revolution: false,
         last_played_player_idx: null,
+
+        testing: false,
     }
 },
 mounted() {
@@ -89,6 +99,7 @@ methods: {
         this.player_card = this.player_card.map(cards => cards.sort((a, b) => a.rank - b.rank));
     },
     can_and_exe(playerIdx, playerCard, card) {
+        console.log("can_and_exe");
         const playerName = this.player_name[playerIdx];
         const is_can = (playerIdx, playerCard, card, playerName) => {
             if (this.can_play_card(card.rank)) {
@@ -130,7 +141,23 @@ methods: {
         this.manage_turn(pass, playerIdx);
         this.ai_player_play();
     },
-    ai_player_play() {
+    ai_player_play(start_idx) {
+        // start_idxから始まる配列を作成
+        start_idx = start_idx || 5;
+        const start_idx_ary = this.player_name.slice(start_idx).map((_, idx) => idx + start_idx);
+        console.log("START_IDX_ARY", start_idx_ary);
+
+        // start_idx_aryの先頭から順にai_play_cardを実行
+        start_idx_ary.forEach(i => {
+            this.ai_play_card(i, this.player_name[i]);
+        })
+        if(start_idx_ary.length !== 0){
+            return;
+        }
+        // 全てのstart_idx_aryを実行した場合はreturn
+
+
+
         // human以外のwinner_player_aryに含まれていないaiプレイヤー
         for (let i = 1; i < this.player_name.length; i++) {
             // winner以外
@@ -143,31 +170,38 @@ methods: {
     check_pass() {
         // pass確認関数:check_fnはwinner_player_aryに含まれていないlast_played_player_idx以外のプレイヤーが全員passしたらtrueを返す関数
         const all_player_passed_check_fn = () => {
-            if (this.passed_players_index.length === this.player_name.length - 2) {
+            console.log("this.passed_players_index.length, this.player_name.length");
+            console.log(this.passed_players_index.length, this.player_name.length);
+            if (this.passed_players_index.length === this.player_name.length - 1) {
             // if (this.passed_players_index.length === this.player_name.length - this.winner_player_ary.length - 1) {
                 return true;
             }
             return false;
         }
         if (all_player_passed_check_fn() === true) {
+            console.log("ALL PLAYER PASSED");
             this.field_card = [];
             this.passed_players_index = [];
+            this.current_player_index_num = this.last_played_player_idx;
+            if(this.last_played_player_idx !== 0) {
+                // this.ai_play_card(this.last_played_player_idx);
+                this.ai_player_play(this.last_played_player_idx);
+            }
         }
         if (all_player_passed_check_fn() === false) {
             console.log("all_player_passed_check_fn() === false");
             // 残りのpassしていないplayerにターンを渡して、残り全員passならfield_cardとpassed_players_indexを初期化して、fieldで最後にカードを出したplayerにターンを渡す
             const remaining_player_idx = this.player_name.filter((_, idx) => !this.passed_players_index.includes(idx));
-            // console.log(remaining_player_idx)
             // remaining_player_idxを配列に変換
             const remaining_player_idx_ary = this.player_name_to_index_ary(remaining_player_idx);
             console.log(remaining_player_idx_ary);
-
-            // this.last_played_player_idxとは、最後にカードを出したplayerのindex
             console.log(this.last_played_player_idx);
+            // remaining_player_idx_aryが空でない場合remaining_player_idx_aryの先頭のプレイヤーにターンを渡す
+            if (remaining_player_idx_ary.length !== 0) {
+                this.current_player_index_num = remaining_player_idx_ary[0];
+            }
 
 
-            // remaining_player_idx_aryからlast_played_player_idxを除いた配列を作る
-            // その配列にai_playさせてlast_played_player_idx以外が全員passしたら
         }
     },
     can_play_card(rank) {
@@ -177,15 +211,28 @@ methods: {
         return false;
     },
     ai_play_card(AI_PLAYER_IDX=1) {
+        // AI_PLAYER_IDXが0の時はhuman_pass(0)を実行して終了
+        if (AI_PLAYER_IDX === 0) {
+            this.human_pass();
+            return;
+        }
+
+        console.log("ai_play_card", AI_PLAYER_IDX);
         if (this.winner_player_ary.includes(AI_PLAYER_IDX)) {return};
         const playerCard = this.player_card[AI_PLAYER_IDX];
         // field_cardが空の場合はランダムにカードを出す
         // field_cardに出せるカードがある場合はその中からランダムにカードを出す
         const card = this.is_field_card_nothing() ? playerCard[Math.floor(Math.random() * playerCard.length)] : playerCard.filter(c => this.can_play_card(c.rank))[Math.floor(Math.random() * playerCard.filter(c => this.can_play_card(c.rank)).length)];
-        // passはfield_cardが空の場合か、playerCardの中でfield_cardに出せるカードがない場合にする
-        const pass = this.is_field_card_nothing() || playerCard.filter(c => this.can_play_card(c.rank)).length === 0;
+        this.testing === true ? console.log("this.is_field_card_nothing()", this.is_field_card_nothing()) : null;
+        // cardがundefinedの場合はpassする
+        const pass = card === undefined;
+
+
+        this.testing === true ? console.log("playerCard.filter(c => this.can_play_card(c.rank)).length === 0", playerCard.filter(c => this.can_play_card(c.rank)).length === 0) : null;
+        this.testing === true ? console.log("card", card) : null;
+        this.testing === true ? console.log("pass", pass) : null;
         // pass ? (this.check_pass(), this.passed_players_index.push(AI_PLAYER_IDX)) : this.can_and_exe(AI_PLAYER_IDX, playerCard, card);
-        pass ? (this.check_pass(), this.manage_turn(true, 0, AI_PLAYER_IDX)) : this.can_and_exe(AI_PLAYER_IDX, playerCard, card);
+        pass ? (this.manage_turn(true, 0, AI_PLAYER_IDX), this.check_pass()) : this.can_and_exe(AI_PLAYER_IDX, playerCard, card);
     },
     is_field_card_nothing() {
         return this.field_card.length === 0;
