--- a/match2.html
+++ b/match2.html
@@ -56,6 +56,18 @@
 </head>
 <body>
     <div id="app">
+        <div>
+        <!-- Add User Data -->
+        <input type="text" v-model="userName" placeholder="Enter user name">
+        <input type="text" v-model="weightNum" placeholder="Enter weight num">
+        <input type="text" v-model="userType" placeholder="Enter user type">
+        <input type="text" v-model="onlineOffline" placeholder="Enter 0 for offline, 1 for online">
+        <button @click="addUserData">Add User Data</button>
+
+        <!-- Add Skills -->
+        <input type="text" v-model="skills" placeholder="Enter skills">
+        <button @click="addSkills">Add Skills</button>
+        </div>
         <!-- input peer id a, length 200 chars -->
         <input type="text" value="peer_id_a" id="peer_id_a" style="width: 200rem;">
 
@@ -193,6 +205,13 @@
 const app = Vue.createApp({
 data() {
 return {
+    web_data: null,
+    userName: '',
+    weightNum: '',
+    userType: '',
+    onlineOffline: '',
+    skills: '',
+
     other_side_data_link: '',
     own_side_data_lin: '',
     match_result: [],
@@ -355,7 +374,6 @@ add_keyword(){
         if (user.keyword_list.some(keyword_id => keyword_id === this.selected_keyword)) throw new Error("すでに追加されています");
     user.keyword_list.push(this.selected_keyword);
     this.list_filter();
-    // 問題なく追加できた場合はERROR_MESSAGEを空にする
     this.ERROR_MESSAGE = "";
     } catch (error) {
         this.ERROR_MESSAGE = error.message;
@@ -393,7 +411,6 @@ add_new_keyword(){
         this.add_keyword();
 
 
-        // 問題なく追加できた場合はERROR_MESSAGEを空にする
         this.ERROR_MESSAGE = "";
     } catch (error) {
         this.ERROR_MESSAGE = error.message;
@@ -532,6 +549,89 @@ parse_url(){
         console.log(JSON.parse(own_side_data_str));
     }
 },
+
+async fetch_addUserData() {
+// 以下に従ってvalidationして
+// // error_check_user_name 1 to 24 length string not null
+// error_check_user_name === undefined || error_check_user_name === null || error_check_user_name.length === 0 || error_check_user_name.length > 24 || error_check_user_name.includes(' ') || error_check_user_name.includes('　') ? (()=>{throw new Error('user_nameが不正です')})() : null;
+// // error_check_weight_num 1 to 1000 integer not null
+// error_check_weight_num === undefined || error_check_weight_num === null || error_check_weight_num < 1 || error_check_weight_num > 1000 ? (()=>{throw new Error('weight_numが不正です')})() : null;
+// // error_check_user_type 'company' or 'customer' not null
+// error_check_user_type === undefined || error_check_user_type === null || error_check_user_type !== 'company' && error_check_user_type !== 'customer' ? (()=>{throw new Error('user_typeが不正です')})() : null;
+// // error_check_offline_online 0 or 1 not null
+// error_check_offline_online === undefined || error_check_offline_online === null || error_check_offline_online !== 0 && error_check_offline_online !== 1 ? (()=>{throw new Error('offline_onlineが不正です')})() : null;
+// // error_check_skills_id_array JSON string, It's only num morethan 1 [1,2,3] or [1,3,5] not null
+// error_check_skills_id_array === undefined || error_check_skills_id_array === null || !Array.isArray(JSON.parse(error_check_skills_id_array)) || JSON.parse(error_check_skills_id_array).length < 1 || JSON.parse(error_check_skills_id_array).some((num) => typeof num !== 'number' || num < 1) ? (()=>{throw new Error('skills_id_arrayが不正です')})() : null;
+try {
+    // error_check_user_name 1 to 24 length string not null
+    this.userName === undefined || this.userName === null || this.userName.length === 0 || this.userName.length > 24 || this.userName.includes(' ') || this.userName.includes('　') ? (()=>{throw new Error('user_nameが不正です')})() : null;
+    // error_check_weight_num 1 to 1000 integer not null
+    this.weightNum === undefined || this.weightNum === null || this.weightNum < 1 || this.weightNum > 1000 ? (()=>{throw new Error('weight_numが不正です')})() : null;
+    // error_check_user_type 'company' or 'customer' not null
+    this.userType === undefined || this.userType === null || this.userType !== 'company' && this.userType !== 'customer' ? (()=>{throw new Error('user_typeが不正です')})() : null;
+    // error_check_offline_online 0 or 1 not null
+    this.onlineOffline === undefined || this.onlineOffline === null || this.onlineOffline !== 0 && this.onlineOffline !== 1 ? (()=>{throw new Error('offline_onlineが不正です')})() : null;
+    // error_check_skills_id_array JSON string, It's only num morethan 1 [1,2,3] or [1,3,5] not null
+    this.skills === undefined || this.skills === null || !Array.isArray(JSON.parse(this.skills)) || JSON.parse(this.skills).length < 1 || JSON.parse(this.skills).some((num) => typeof num !== 'number' || num < 1) ? (()=>{throw new Error('skills_id_arrayが不正です')})() : null;
+    // user_listに追加
+    const new_data = {
+        id: this.user_list.length + 1,
+        online_status: {start: null, until:null, on_off: this.onlineOffline === 1 ? "on" : "off"},
+        name: this.userName,
+        user_type_list_id: this.userType === 'company' ? 1 : 2,
+        keyword_list: JSON.parse(this.skills),
+        weight: this.weightNum,
+    };
+    // new_dataを./server.jsのapp.post('/insert_user_datas', (req, res) => {でfetchする
+    //         res.status(200)
+    //    .json({result: 'success',
+    //                status: 200,
+    //                message: RESULT
+    //            }); を受け取る
+    // RESULTが"success"であれば以下を実行
+
+    const res = await fetch('localhost:3000/insert_user_datas', {method: 'POST',headers: {'Content-Type': 'application/json',},
+        body: JSON.stringify(new_data),
+    });
+    const data = await res.json(); console.log(data);
+    this.ERROR_MESSAGE = "";
+    } catch (error) {
+        this.ERROR_MESSAGE = error.message;
+    }
+},
+async fetch_addSkills() {
+// 以下に沿ってvalidationして
+// error_check_skill 1 to 24 length string not null
+// error_check_skill === undefined || error_check_skill === null || error_check_skill.length === 0 || error_check_skill.length > 24 || error_check_skill.includes(' ') || error_check_skill.includes('　') ? (()=>{throw new Error('skillが不正です')})() : null;
+try {
+    // error_check_skill 1 to 24 length string not null
+    this.skills === undefined || this.skills === null || this.skills.length === 0 || this.skills.length > 24 || this.skills.includes(' ') || this.skills.includes('　') ? (()=>{throw new Error('skillが不正です')})() : null;
+    // keyword_listに追加
+    const new_data = {
+        id: this.keyword_list.length + 1,
+        keyword: this.skills,
+    };
+    const res = await fetch('localhost:3000/insert_skills', {method: 'POST',headers: {'Content-Type': 'application/json',},
+        body: JSON.stringify(new_data),
+    });
+    const data = await res.json(); console.log(data);
+    this.ERROR_MESSAGE = "";
+} catch (error) {
+    this.ERROR_MESSAGE = error.message;
+}
+},
+async fetch_read_user_datas_skills() {
+    try {
+        const res = await fetch('localhost:3000/read_user_datas_skills', {method: 'GET',headers: {'Content-Type': 'application/json',},
+        });
+        const data = await res.json(); console.log(data);
+        this.web_data = data;
+        this.ERROR_MESSAGE = "";
+    } catch (error) {
+        this.ERROR_MESSAGE = error.message;
+    }
+}
+
 
 }}).mount('#app');
 
